--- a/src/assets/scss/components/_tiles.scss
+++ b/src/assets/scss/components/_tiles.scss
@@ -95,7 +95,8 @@
 
     &:hover {
       &:before {
-        opacity: 0;
+        opacity: 0.7;
+        background-color: _palette(accent1) !important;
       }
     }
 
@@ -108,42 +109,6 @@
     &:nth-child(4n - 1),
     &:nth-child(4n - 2) {
       width: 60%;
-    }
-
-    &:nth-child(6n - 5) {
-      &:before {
-        background-color: _palette(accent1);
-      }
-    }
-
-    &:nth-child(6n - 4) {
-      &:before {
-        background-color: _palette(accent2);
-      }
-    }
-
-    &:nth-child(6n - 3) {
-      &:before {
-        background-color: _palette(accent3);
-      }
-    }
-
-    &:nth-child(6n - 2) {
-      &:before {
-        background-color: _palette(accent4);
-      }
-    }
-
-    &:nth-child(6n - 1) {
-      &:before {
-        background-color: _palette(accent5);
-      }
-    }
-
-    &:nth-child(6n) {
-      &:before {
-        background-color: _palette(accent6);
-      }
     }
   }
 
