--- a/src/assets/scss/libs/_vars.scss
+++ b/src/assets/scss/libs/_vars.scss
@@ -20,25 +20,25 @@
 
 // Font.
 	$font: (
-		family:				('Source Sans Pro', Helvetica, sans-serif),
+		family:				('Roboto', sans-serif),
 		family-fixed:		('Courier New', monospace),
-		weight:				300,
-		weight-bold:		600,
+		weight:				150,
+		weight-bold:		300,
 		letter-spacing:		0.025em,
 		letter-spacing-alt:	0.25em
 	);
 
 // Palette.
 	$palette: (
-		bg:					#696969,
-		bg-alt:				#2a2f4a,
+		bg:					#483C32,
+		bg-alt:				#483C32,
 		fg:					#ffffff,
 		fg-bold:			#ffffff,
 		fg-light:			rgba(244,244,255,0.2),
 		border:				rgba(212,212,255,0.1),
 		border-bg:			rgba(212,212,255,0.035),
-		highlight:			#9bf1ff,
-		accent1:			#6fc3df,
+		highlight:			#CD7F32,
+		accent1:			#e7b788,
 		accent2:			#8d82c4,
 		accent3:			#ec8d81,
 		accent4:			#e7b788,
