--- a/src/assets/scss/libs/_vars.scss
+++ b/src/assets/scss/libs/_vars.scss
@@ -41,7 +41,7 @@
 		accent1:			#e7b788,
 		accent2:			#8d82c4,
 		accent3:			#ec8d81,
-		accent4:			#e7b788,
+		accent4:			#331800,
 		accent5:			#8ea9e8,
 		accent6:			#87c5a4
 	);
