--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -62,6 +62,7 @@
 	h1, h2, h3, h4, h5, h6 {
 		color: _palette(fg-bold);
 		font-weight: _font(weight-bold);
+        text-shadow: 2px 2px 5px _palette(accent4);
 		line-height: 1.65;
 		margin: 0 0 (_size(element-margin) * 0.5) 0;
 
