--- a/src/assets/scss/components/_tiles.scss
+++ b/src/assets/scss/components/_tiles.scss
@@ -16,7 +16,7 @@
   }
 
   article {
-    @include vendor('align-items', 'center');
+    @include vendor('align-items', 'end');
     @include vendor('display', 'flex');
     @include vendor(
       'transition',
