--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -60,6 +60,10 @@
 					background-color: desaturate(darken(_palette(highlight), 15), 5);
 				}
 			}
+
+            &.lang {
+                padding: 0 0.3em;
+            }
 		}
 
 		nav {
