Build up da basic structure

--- a/src/assets/scss/layout/_banner.scss
+++ b/src/assets/scss/layout/_banner.scss
@@ -100,8 +100,18 @@
 			}
 		}
 
+        &.portfolio 
+        { 
+            @include vendor('background-image', 'url("../images/portfolio.jpg")');
+        }
+
+        &.about 
+        { 
+            @include vendor('background-image', 'url("../images/about_us.jpeg")');
+        }
+
 		&.style1 { &:after { background-color: _palette(accent1); } }
-		&.style2 { &:after { background-color: _palette(accent2); } }
+		&.style2 { &:after { background-color: _palette(accent4); } }
 		&.style3 { &:after { background-color: _palette(accent3); } }
 		&.style4 { &:after { background-color: _palette(accent4); } }
 		&.style5 { &:after { background-color: _palette(accent5); } }
