--- a/src/assets/scss/libs/_vars.scss
+++ b/src/assets/scss/libs/_vars.scss
@@ -30,8 +30,8 @@
 
 // Palette.
 	$palette: (
-		bg:					#483C32,
-		bg-alt:				#483C32,
+		bg:					#201D1E,
+		bg-alt:				#201D1E,
 		fg:					#ffffff,
 		fg-bold:			#ffffff,
 		fg-light:			rgba(244,244,255,0.2),
@@ -41,7 +41,7 @@
 		accent1:			#e7b788,
 		accent2:			#8d82c4,
 		accent3:			#ec8d81,
-		accent4:			#331800,
-		accent5:			#8ea9e8,
+		accent4:			#201D1E,
+		accent5:			#040505,
 		accent6:			#87c5a4
 	);
