--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -139,7 +139,7 @@
 			@include vendor('animation', 'none');
 			background-color: transparent;
 			box-shadow: none;
-			position: fixed;
+			position: absolute;
 
 			&.style1 { .logo { strong { color: _palette(accent1); } } }
 			&.style2 { .logo { strong { color: _palette(accent2); } } }
