Using gatsby-images for tiles on the home page.

--- a/src/assets/scss/components/_tiles.scss
+++ b/src/assets/scss/components/_tiles.scss
@@ -17,7 +17,7 @@
 
   article {
     @include vendor('align-items', 'end');
-    @include vendor('display', 'flex');
+    //FIX @include vendor('display', 'flex');
     @include vendor(
       'transition',
       (
