Video frame added.

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -59,7 +59,8 @@
 	@import 'components/tiles';
 	@import 'components/contact-method';
 	@import 'components/spotlights';
-
+	@import 'components/video';
+    
 // Layout.
 
 	@import 'layout/header';
