Head was implemented via Helmet (localization support).

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -63,6 +63,11 @@
 
             &.lang {
                 padding: 0 0.3em;
+
+                &.selected {
+					color: _palette(highlight);
+                    font-weight: bold;
+				}
             }
 		}
 
